--- a/package.json
+++ b/package.json
@@ -29,23 +29,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bekk/bekk-radar.git"
+    "url": "https://github.com/bekk/bekk-radar-public.git"
   },
   "author": {
     "name": "Bekk Consulting AS",
-    "url": "http://bekk.no"
+    "url": "https://bekk.no"
   },
   "contributors": [
     {
-      "name": "Johan Klokkhammer Helsing",
-      "email": "johanhelsing@gmail.com"
+      "name": "Johan Klokkhammer Helsing"
     },
     {
       "name": "Hannes Waller"
     },
     {
-      "name": "Alexander Vassbotn Røyne-Helgesen",
-      "email": "alexander@phun-ky.net"
+      "name": "Alexander Vassbotn Røyne-Helgesen"
     }
   ],
   "optionalDependencies": {
